--- a/20170212_硬件信息查看.md
+++ b/20170212_硬件信息查看.md
@@ -14,7 +14,20 @@
 ```
 	## 相关用法：
 		MegaCli -PDList -aALL 				# 查看硬盘信息
+			
 		MegaCli -LDInfo -Lall -aALL 		# 查raid级别
+
+			RAID Level : 
+				Primary-1, Secondary-0, RAID Level Qualifier-0"   #代表Raid 1
+				Primary-0, Secondary-0, RAID Level Qualifier-0"   #代表Raid 0
+				Primary-5, Secondary-0, RAID Level Qualifier-3"   #代表Raid 5
+				Primary-1, Secondary-3, RAID Level Qualifier-0"   #代表Raid10
+
+			State               : Optimal 	# 正常状态
+			Number Of Drives    : 2 		# RAID组包含2块磁盘
+			Span Depth          : 1 		# 1(raid1); 2(raid10)
+
+
 		MegaCli -AdpAllInfo -aALL 			# 查raid卡信息
 		MegaCli -AdpBbuCmd -aAll 			# 查看电池信息
 		MegaCli -FwTermLog -Dsply -aALL 	# 查看raid卡日志
