--- a/20170401_CDH.md
+++ b/20170401_CDH.md
@@ -5,13 +5,13 @@
 
 - hdfs
 	+ NameNode: 50070
-	+ DataNode: 50010
+	+ DataNode: 50075
 	+ SecondaryNN: 50090
 
 - impala
 	+ Catlog Server: 25020
 	+ StateStore: 25010
-	+ impalad: 
+	+ impalad: 25000
 
 - hive
 	+ MetaStore: 9083
@@ -20,18 +20,18 @@
 
 - yarn
 	+ ResourceManager: 8088
-	+ NodeManager: 
+	+ NodeManager: 8042
 	+ HistoryServer: 19888
 
 - kafka
 	+ Broke: 9092
 
 - kudu
-	+ Master
-	+ Tablet Server
+	+ Master: 8051
+	+ Tablet Server: 8050
 
 - zookeeper
-	+ leader
+	+ leader: 2181
 	+ follower
 
 
