--- a/20170626_kernel.parameter.md
+++ b/20170626_kernel.parameter.md
@@ -46,13 +46,23 @@
 - net.ipv4.tcp_keepalive_probes = 3
 	TCP发送keepalive消息的频度。缺省是2小时，如果probe 3次(每次30秒)不成功,内核才彻底放弃
 
+- net.ipv4.tcp_window_scaling 
+	默认值1，是否启用windows scaling，若要支持超过64KB的窗口，必须启用
+
+- net.ipv4.tcp_sack 
+	默认值1，是否开启sack(selective ack)，报告收到的数据碎片，解决快速重传不知道后续数据是否重传的问题
+
 - net.core.rmem_default 	# 表示内核套接字接收缓存区默认的大小
 - net.core.wmem_default 	# 表示内核套接字发送缓存区默认的大小
 - net.core.rmem_max 		# 表示内核套接字接收缓存区最大大小
 - net.core.wmem_max 		# 表示内核套接字发送缓存区最大大小
 
 ### 硬件相关 `/proc/sys/vm`
-- vm.swappiness 	# swap使用策略，默认60，0表示尽量少用
+- vm.swappiness 	
+	swap使用策略，默认60，0表示尽量少用
+
+- vm.dirty_background_ratio 
+	kdmflush守护进程负责同步所有与文件系统相关的页面至磁盘，当内存中的脏页面数量超过10%时kdmflush开始回写
 
 
 ### 文件系统 `/proc/sys/fs`
