--- a/20170626_kernel.parameter.md
+++ b/20170626_kernel.parameter.md
@@ -72,6 +72,26 @@
 - fs.file-nr = 22222 0 6553600
 	1.已经分配的文件句柄数，2.已经分配单没有使用的文件句柄数(2.6内核为0)，3.最大文件句柄数
 
+- fs.nr_open
+	一个进程最多使用的文件句柄数
+
+- fs.aio-max-nr
+	最大允许的aio请求数
+
+- fs.aio-nr
+	当前aio请求数
+
+- fs.inode-max
+	最大inode数量，通常为file-max的3-4倍，因为stdin/stdout/socket都需要inode，但2.6已经废弃；
+
+- fs.inode-nr
+ 	列出inode-state的前两个item，可以跳过不看
+
+- fs.inode-state
+ 	前3个列为nr_inodes/nr_free_inodes/preshrink，而前两个分别表示已分配inode数/空闲inode数；当nr_inodes > inode_max时preshirnk = nr_inodes – inode_max，此时系统需要清除排查inode列表
+
+
+
 
 ### 内核 
 
