--- a/20170401_CDH.md
+++ b/20170401_CDH.md
@@ -4,14 +4,16 @@
 
 
 - hdfs
-	+ NameNode: 50070
-	+ DataNode: 50075
-	+ SecondaryNN: 50090
+	+ NameNode Web: 50070
+	+ DataNode: 50010
+	+ DataNode Web: 50075
+	+ SecondaryNN Web: 50090
 
 - impala
 	+ Catlog Server: 25020
 	+ StateStore: 25010
 	+ impalad: 25000
+	+ impalad beeswax: 21000
 
 - hive
 	+ MetaStore: 9083
@@ -32,6 +34,6 @@
 
 - zookeeper
 	+ leader: 2181
-	+ follower
+	+ follower: 2181
 
 
